--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 professional uniformed services: <br />Indian Air Force<br />Indian
                 Army<br />Indian Navy
             </p>
-            <img src="/images/Combined.png" alt="INDIAN ARMED FORCES LOGO" />
+            <img src="images/Combined.png" alt="INDIAN ARMED FORCES LOGO" />
         </div>
         <div class="home-3">
             <div class="desc">
                 <div class="force-top iaf">
-                    <img src="/images/IAF Logo.png" alt="" />
+                    <img src="images/IAF Logo.png" alt="" />
                     <h3>INDIAN<br />AIR FORCE</h3>
                 </div>
                 <div class="bottom-text">
@@ -55,7 +55,7 @@
             </div>
             <div class="desc">
                 <div class="force-top army">
-                    <img src="/images/Army Logo.png" alt="" />
+                    <img src="images/Army Logo.png" alt="" />
                     <h3>INDIAN ARMY</h3>
                 </div>
                 <div class="bottom-text">
@@ -65,7 +65,7 @@
             </div>
             <div class="desc">
                 <div class="force-top navy">
-                    <img src="/images/Navy Logo.png" alt="" />
+                    <img src="images/Navy Logo.png" alt="" />
                     <h3>INDIAN NAVY</h3>
                 </div>
                 <div class="bottom-text">
@@ -78,22 +78,22 @@
             <h1>EQUIVALENT RANKS IN<br>ARMY, NAVY and AIR FORCE</h1>
             <div class="ranklist r-army">
                 <h3>INDIAN ARMY</h3>
-                <img src="/images/Ranks Army.png" alt="" />
+                <img src="images/Ranks Army.png" alt="" />
             </div>
             <div class="ranklist r-navy">
                 <h3>INDIAN NAVY</h3>
-                <img src="/images/Ranks Navy.png" alt="" />
+                <img src="images/Ranks Navy.png" alt="" />
             </div>
             <div class="ranklist r-iaf">
                 <h3>INDIAN AIR FORCE</h3>
-                <img src="/images/Ranks IAF.png" alt="" />
+                <img src="images/Ranks IAF.png" alt="" />
             </div>
         </div>
 
         <div id="indian-army">
             <div class="glass">
                 <div class="wrapper">
-                    <img src="/images/Army Logo.png" alt="" />
+                    <img src="images/Army Logo.png" alt="" />
                     <h1>INDIAN ARMY</h1>
                     <h3>सेवा परमो धर्म</h3>
                     <p>
