--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <nav>
                     <ul>
 						
-                        <li>HOME</li>
-                        <li><a href="#indian-army">INDIAN ARMY</a></li>
-                        <li><a href="#indian-iaf"></a>INDIAN AIR FORCE</a></li>
-                        <li><a href="#indian-navy"></a>INDIAN NAVY</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="indian-army.html">INDIAN ARMY</a></li>
+                        <li><a href="indian-af.html">INDIAN AIR FORCE</a></li>
+                        <li>INDIAN NAVY</li>
                     </ul>
                     <p>JOIN US</p>
                 </nav>
@@ -89,27 +89,6 @@
                 <img src="images/Ranks IAF.png" alt="" />
             </div>
         </div>
-
-        <div id="indian-army">
-            <div class="glass">
-                <div class="wrapper">
-                    <img src="images/Army Logo.png" alt="" />
-                    <h1>INDIAN ARMY</h1>
-                    <h3>सेवा परमो धर्म</h3>
-                    <p>
-                        The Indian Army is the land-based branch and the largest
-                        component of the Indian Armed Forces.<br><br><br><br>The primary
-                        mission of the Indian Army is to ensure national
-                        security and national unity, to defend the nation from
-                        external aggression and internal threats, and to
-                        maintain peace and security within its borders.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-		
-
         <div class="footer">
             <h6>We welcome you to be a part of<br />Indian Armed Forces</h6>
             <div class="join">
